# fi

./: .gitmodules  Cargo.toml  README.md  Readme.md  errors.md  prim  rustfmt.toml
check/: Cargo.toml
codegen/: Cargo.toml
codegen/src/: analyze.rs  lib.rs  pass.rs  place.rs  ptr.rs  trans.rs  value.rs
codegen/src/trans/: cast.rs  operand.rs  place.rs  rvalue.rs  stmt.rs  term.rs
compiler/assemble/: Cargo.toml
compiler/assemble/src/: lib.rs
compiler/backend_js/: Cargo.toml
compiler/backend_js/src/: adt.rs  expr.rs  indent.rs  intrinsic.rs  lib.rs  optimize.rs  pat.rs
compiler/backend_llvm/: Cargo.toml
compiler/backend_llvm/src/: abi.rs  body.rs  ctx.rs  intrinsics.rs  layout.rs  lib.rs  local.rs  operand.rs  place.rs  ssa.rs  ty.rs  value.rs
compiler/base_db/: Cargo.toml
compiler/base_db/src/: cfg.rs  input.rs  lib.rs  libs.rs  metadata.rs  target.rs
compiler/base_db/src/snapshots/: base_db__tests__parse.snap
compiler/check/: Cargo.toml
compiler/check/src/: constraint.rs  ctx.rs  error.rs  layout.rs  lib.rs  list.rs  sharded.rs  subst.rs  tcx.rs  ty.rs  unify.rs
compiler/check/src/ctx/: expr.rs  pat.rs
compiler/check/src/tcx/: expr.rs  item.rs  pat.rs  ty.rs  unify.rs  verify.rs
compiler/codegen/: Cargo.toml  build.rs
compiler/codegen/src/: abi.rs  analyze.rs  assembly.rs  backend.rs  body.rs  ctx.rs  db.rs  dropping.rs  intrinsic.rs  intrinsics.rs  layout.rs  lib.rs  linker.rs  local.rs  lower.rs  obj_file.rs  operand.rs  pass.rs  place.rs  ptr.rs  ssa.rs  target.rs  trans.rs  ty.rs  type_.rs  value.rs
compiler/codegen/src/abi/: pass.rs
compiler/codegen/src/trans/: operand.rs  place.rs  rvalue.rs  term.rs
compiler/codegen_cranelift/: Cargo.toml
compiler/codegen_cranelift/src/: alloc.rs  lib.rs  place.rs  ptr.rs  value.rs
compiler/diagnostics/: Cargo.toml
compiler/diagnostics/src/: duplicate_declaration.rs  inference_cycle.rs  lib.rs  mismatched_kind.rs  mismatched_type.rs  private_operator.rs  unresolved_operator.rs  unsolved_constraint.rs  value_hole.rs
compiler/driver/: Cargo.toml
compiler/driver/src/: db.rs  diagnostics.rs  lib.rs  manifest.rs  metadata.rs  opts.rs
compiler/fi/: Cargo.toml
compiler/fi/repl/src/: lib.rs
compiler/fi/src/: interactive.rs  main.rs
compiler/hir/: Cargo.toml
compiler/hir/src/: ast_id.rs  attrs.rs  body.rs  convert.rs  data.rs  db.rs  def_map.rs  diagnostic.rs  diagnostics.rs  display.rs  errors.rs  expr.rs  from_id.rs  id.rs  ir.rs  item_scope.rs  item_tree.rs  lang.rs  lib.rs  module_tree.rs  name.rs  path.rs  per_ns.rs  printing.rs  resolve.rs  semantics.rs  source.rs  source_analyzer.rs  source_to_def.rs  type_ref.rs
compiler/hir/src/body/: lower.rs
compiler/hir/src/def_map/: collector.rs  path_resolution.rs
compiler/hir/src/diagnostics/: mod.rs  unknown_export.rs  unknown_name.rs  unresolved_import.rs  unresolved_path.rs
compiler/hir/src/ir/: debug.rs
compiler/hir/src/item_tree/: lower.rs
compiler/hir_def/: Cargo.toml
compiler/hir_def/src/: arena.rs  ast_id.rs  attrs.rs  body.rs  cfg.rs  child_by_source.rs  data.rs  db.rs  def_map.rs  diagnostic.rs  diagnostics.rs  display.rs  dyn_map.rs  expr.rs  id.rs  in_file.rs  infix.rs  item_scope.rs  item_tree.rs  keys.rs  lang_item.rs  lib.rs  name.rs  pat.rs  path.rs  per_ns.rs  resolver.rs  scope.rs  source.rs  type_ref.rs  visibility.rs
compiler/hir_def/src/arena/: map.rs
compiler/hir_def/src/body/: lower.rs
compiler/hir_def/src/def_map/: collector.rs  path_resolution.rs
compiler/hir_def/src/diagnostics/: mod.rs  unknown_export.rs  unknown_name.rs  unmatched_pattern.rs  unreachable_branch.rs  unresolved_import.rs  unresolved_path.rs
compiler/hir_def/src/item_tree/: lower.rs
compiler/hir_ty/: Cargo.toml
compiler/hir_ty/src/: class.rs  convert.rs  ctx.rs  db.rs  diagnostics.rs  display.rs  expr.rs  infer.rs  info.rs  kind.rs  lib.rs  lower.rs  pat.rs  search.rs  traits.rs  ty.rs  unify.rs
compiler/hir_ty/src/class/: ctx.rs
compiler/hir_ty/src/diagnostics/: mod.rs  recursive_type.rs  type_mismatch.rs  unsolved_constraint.rs
compiler/hir_ty/src/infer/: ctnt.rs  expr.rs  kind.rs  pat.rs  skolem.rs  subsume.rs  unify.rs
compiler/language-server/: Cargo.toml
compiler/language-server/src/: analysis.rs  db.rs  diagnostics.rs  handlers.rs  lib.rs  state.rs  util.rs
compiler/language-server/src/analysis/: classify.rs  hover.rs
compiler/language-server/src/state/: dispatcher.rs  notifications.rs  workspace.rs
compiler/language-server/src/tests/: mod.rs  server.rs
compiler/mir/: Cargo.toml
compiler/mir/src/: builder.rs  constant.rs  convert.rs  db.rs  display.rs  eval.rs  graph.rs  instance.rs  instance_record.rs  ir.rs  layout.rs  lib.rs  lifetime.rs  lower.rs  optimize.rs  post.rs  printing.rs  repr.rs  syntax.rs  traversal.rs  ty.rs  visit.rs  visitor.rs
compiler/mir/src/builder/: copying.rs
compiler/mir/src/convert/: match_.rs
compiler/mir/src/graph/: dominators.rs
compiler/mir/src/ir/: display.rs
compiler/mir/src/lower/: builder.rs  expr.rs  intrinsic.rs  intrinsics.rs  pat.rs  pattern.rs
compiler/mir/src/optimize/: vars.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: buffer.rs  error.rs  event.rs  grammar.rs  lexer.rs  lib.rs  parse.rs  parser.rs  syntax_kind.rs  token.rs  token_set.rs
compiler/parser/src/grammar/: attributes.rs  exprs.rs  items.rs  paths.rs  patterns.rs  types.rs
compiler/parser/src/parser/: ext.rs
compiler/parser/src/snapshots/: parser__lexer__lexer.snap  (+2 more)
compiler/project/: Cargo.toml
compiler/project/src/: lib.rs  manifest.rs
compiler/shadow/: Cargo.toml
compiler/shadow/repl/: Cargo.toml
compiler/shadow/src/: interactive.rs  main.rs
compiler/source/: Cargo.toml
compiler/source/src/: file.rs  lib.rs  opts.rs
compiler/syntax/: Cargo.toml
compiler/syntax/parser/: Cargo.toml
compiler/syntax/src/: ast.rs  error.rs  group.rs  hash.rs  lib.rs  parsing.rs  printing.rs  ptr.rs  symbol.rs  syntax_node.rs
compiler/vfs/: Cargo.toml
compiler/vfs/src/: file_set.rs  in_file.rs  lib.rs  vfs_path.rs
driver/: Cargo.toml
driver/src/: db.rs  lib.rs
(+311 files in other folders)
