[workspace]
members = [
    "compiler/shadow",
    "compiler/driver",
    "compiler/markup",
    "compiler/diagnostics",
    # "compiler/lower",
    "compiler/hir",
    "compiler/hir_ty",
    "compiler/hir_def",
    "compiler/base_db",
    "compiler/syntax",
    "compiler/parser",
    "compiler/arena",
]

[profile.dev]
debug = false

[profile.release]
lto = true
