[workspace]
members = [
    "compiler/shadow",
    "compiler/driver",
    "compiler/markup",
    "compiler/diagnostics",
    "compiler/backend_js",
    "compiler/codegen",
    # "compiler/lower",
    "compiler/metadata",
    "compiler/hir",
    "compiler/hir_ty",
    "compiler/hir_def",
    "compiler/base_db",
    "compiler/syntax",
    "compiler/parser",
    "compiler/arena",
    "compiler/cfg",
    "compiler/project",
    "compiler/paths",
    "compiler/vfs",
    "compiler/language-server",
]

[profile.dev]
debug = false

[profile.release]
lto = true
