[package]
name = "driver"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2018"

[dependencies]
diagnostics = { path = "../../.crates/diagnostics" }
target-lexicon = "^0.10.0"
syntax = { path = "../syntax" }
hir = { path = "../hir" }
check = { path = "../check" }
mir = { path = "../mir" }
codegen = { path = "../codegen" }
