[package]
name = "backend_js"
version = "0.1.0"
edition = "2021"

[lib]
name = "shade_backend_js"
crate-type = ["dylib"]

[dependencies]
arena = { path = "../arena" }
hir = { path = "../hir" }
rustc-hash = "1.1.0"
tracing = "^0.1"

[dependencies.tracing-subscriber]
version = "0.3.15"
default-features = false
features = ["env-filter", "smallvec", "fmt", "ansi"]
