[package]
name = "backend_llvm"
version = "0.1.0"
edition = "2021"

[lib]
name = "shade_backend_llvm"
crate-type = ["dylib"]

[dependencies]
arena = { path = "../arena" }
codegen = { path = "../codegen" }
mir = { path = "../mir" }
hir = { path = "../hir" }
rustc-hash = "1.1.0"
target-lexicon = { version = "0.12.0", features = ["std"] }
mangling = "0.2.3"
tracing = "^0.1"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm11-0"]

[dependencies.tracing-subscriber]
version = "0.3.15"
default-features = false
features = ["env-filter", "smallvec", "fmt", "ansi"]
