[package]
name = "backend_llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
arena = { path = "../arena" }
mir = { path = "../mir" }
hir = { path = "../hir" }
base_db = { path = "../base_db" }
rustc-hash = "1.1.0"
target-lexicon = { version = "0.12.0", features = ["std"] }
mangling = "0.2.3"
tracing = "^0.1"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm11-0"]
