[package]
name = "base_db"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2021"

[dependencies]
vfs = { path = "../vfs" }
cfg = { path = "../cfg" }
paths = { path = "../paths" }
syntax = { path = "../syntax" }
salsa = "0.17.0-pre.2"
smol_str = "0.1.17"
rustc-hash = "1.1.0"
target-lexicon = { version = "0.12.0", features = ["std"] }
