[package]
name = "check"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2018"

[dependencies]
diagnostics = { path = "../../../.crates/diagnostics" }
hir = { path = "../hir" }
bumpalo = "3.4.0"
target-lexicon = "^0.10.0"
serde = { version = "1.0.116", features = ["derive"] }
bincode = "1.3.1"
