[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hir = { version = "0.1.0", path = "../hir" }
inkwell = { version = "0.1.1", features = ["llvm14-0"] }
mir = { version = "0.1.0", path = "../mir" }
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa.git", version = "0.1.0" }
target-lexicon = "0.12.6"
tracing = "0.1.37"
