[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arena = { git = "https://github.com/Xiulf/arena", version = "0.1.0" }
base_db = { version = "0.1.0", path = "../base_db" }
cc = "1.0.79"
hir = { version = "0.1.0", path = "../hir" }
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
mangling = "0.2.3"
mir = { version = "0.1.0", path = "../mir" }
profile = { package = "ra_ap_profile", version = "0.0.163" }
rustc-hash = "1.1.0"
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa.git", version = "0.1.0" }
target-lexicon = "0.12.6"
tempfile = "3.5.0"
tracing = "0.1.37"
triomphe = { version = "0.1.8" }
