[package]
name = "codegen_cranelift"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
source = { path = "../source" }
hir = { path = "../hir" }
check = { path = "../check" }
layout = { path = "../layout" }
mir = { path = "../mir" }
codegen = { path = "../codegen" }
cranelift = "^0.68.0"
cranelift-module = "^0.68.0"
cranelift-object = "^0.68.0"
target-lexicon = "^0.11.0"
object = "^0.20.0"
mangling = "^0.2.2"
