[package]
name = "diagnostics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa.git", version = "0.1.0" }
text-size = { version = "1.1.0", features = ["serde"] }
vfs = { version = "0.1.0", path = "../vfs" }
