[package]
name = "fi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
base_db = { version = "0.1.0", path = "../base_db" }
clap = { version = "4.1.2", features = ["derive"] }
driver = { version = "0.1.0", path = "../driver" }
glob = "0.3.1"
paths = { version = "0.1.0", path = "../paths" }
project = { version = "0.1.0", path = "../project" }
tracing = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = ["smallvec", "fmt", "ansi", "env-filter"]
