[package]
name = "hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_db = { version = "0.1.0", path = "../base_db" }
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa.git", version = "0.1.0" }
smol_str = { version = "0.1.23", features = ["serde"] }
syntax = { version = "0.1.0", path = "../syntax" }
