[package]
name = "hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_db = { version = "0.1.0", path = "../base_db" }
diagnostics = { version = "0.1.0", path = "../diagnostics" }
either = "1.8.1"
hir_def = { version = "0.1.0", path = "../hir_def" }
hir_ty = { version = "0.1.0", path = "../hir_ty" }
mangling = "0.2.3"
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa.git", version = "0.1.0" }
tracing = "0.1.37"
triomphe = "0.1.8"
