[package]
name = "hir_def"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2021"

[dependencies]
arena = { path = "../arena" }
syntax = { path = "../syntax" }
base_db = { path = "../base_db" }
rustc-hash = "1.1.0"
smol_str = "0.1.17"
either = "1.6.1"
salsa = "0.16.0"
anymap = "0.12.1"
tracing = "^0.1"
