[package]
name = "hir_ty"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2021"

[dependencies]
hir_def = { path = "../hir_def" }
arena = { path = "../arena" }
syntax = { path = "../syntax" }
base_db = { path = "../base_db" }
rustc-hash = "1.1.0"
smallvec = "1.9.0"
salsa = "0.16.0"
tracing = "^0.1"
