[package]
name = "hir_ty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arena = { git = "https://github.com/Xiulf/arena", version = "0.1.0" }
base_db = { version = "0.1.0", path = "../base_db" }
diagnostics = { version = "0.1.0", path = "../diagnostics" }
ena = "0.14.0"
hir_def = { version = "0.1.0", path = "../hir_def" }
parking_lot = "0.12.1"
ra_ap_stdx = "0.0.149"
salsa = { package = "salsa-2022", git = "https://github.com/salsa-rs/salsa.git", version = "0.1.0" }
syntax = { version = "0.1.0", path = "../syntax" }
tracing = "0.1.37"
triomphe = "0.1.8"
vfs = { version = "0.1.0", path = "../vfs" }
