[package]
name = "language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
hir_def = { path = "../hir_def" }
syntax = { path = "../syntax" }
base_db = { path = "../base_db" }
project = { path = "../project" }
paths = { path = "../paths" }
vfs = { path = "../vfs" }
salsa = "0.16.0"
lsp-server = "^0.6"
lsp-types = "^0.93"
rustc-hash = "1.1.0"
serde = "^1.0"
serde_json = "^1.0"
crossbeam-channel = "^0.5.4"
threadpool = "^1.8"
parking_lot = "^0.11"
anyhow = "1.0.38"
tracing = "^0.1"

[dev-dependencies]
tempdir = "^0.3"
