[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
text-size = { version = "1.1.0", features = ["serde"] }
unicode-xid = "0.2.4"

[dev-dependencies]
insta = { version = "1.26.0", features = ["ron", "redactions"] }
unindent = "0.1.11"
