[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
base_db = { path = "../base_db" }
vfs = { path = "../vfs" }
cfg = { path = "../cfg" }
paths = { path = "../paths" }
arena = { path = "../arena" }
rustc-hash = "1.1.0"
smol_str = "0.1.17"
serde = { version = "^1.0.123", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.38"
tracing = "^0.1"
