[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base_db = { version = "0.1.0", path = "../base_db" }
index_vec = "0.1.3"
paths = { version = "0.1.0", path = "../paths" }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
vfs = { version = "0.1.0", path = "../vfs" }
