[package]
name = "shadow"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2021"

[dependencies]
driver = { path = "../driver" }
base_db = { path = "../base_db" }
syntax = { path = "../syntax" }
markup = { path = "../markup" }
hir = { path = "../hir" }
repl = { path = "repl" }
clap = { version = "3.2.20", features = ["derive"] }
notify = "5.0.0"
anyhow = "1.0.38"
env_logger = "0.9.0"
log = "0.4.17"
