[package]
name = "syntax"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2018"

[dependencies]
data_structures = { path = "../data_structures" }
diagnostics = { path = "../diagnostics" }
source = { path = "../source" }
parser = { path = "../parser" }
codespan = "0.9.5"
salsa = "0.16.0"
serde = { version = "^1.0.117", features = ["derive"] }
